# static-site-generator

./: Cargo.toml  README.md  config.yaml  dist-workspace.toml
content/: hello-world.md  some-more.md  test.md
public/: hello-world.html
src/: context.rs  main.rs  parser.rs  renderer.rs  utils.rs
static/: styles.css
templates/: base.html  blog.html  blog_list.html  home.html  sitemap.xml
