[package]
name = "static-site-generator"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Hamdan-Khan/static-site-generator"

[dependencies]
cargo-dist = "0.30.3"
lazy_static = "1.5.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
